[package]
name = "ectf-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
libc = "0.2"
crc32fast = "1"
hmac = "0.12"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap_complete = "4"
reqwest = { version = "0.12", features = ["blocking", "multipart", "json"] }
